@@ -768,7 +768,7 @@ public class Fmath{
             if(!Fmath.isPlusInfinity(xDouble)){
                 if(!Fmath.isMinusInfinity(xDouble)){
                     if(xDouble!=0.0D){
-                        String xString = ((new Double(xDouble)).toString()).trim();
+                        String xString = ((Double.valueOf(xDouble)).toString()).trim();
                         xTruncated = Double.parseDouble(truncateProcedure(xString, trunc));
                     }
                 }
@@ -784,7 +784,7 @@ public class Fmath{
             if(!Fmath.isPlusInfinity(xFloat)){
                 if(!Fmath.isMinusInfinity(xFloat)){
                     if(xFloat!=0.0D){
-                        String xString = ((new Float(xFloat)).toString()).trim();
+                        String xString = ((Float.valueOf(xFloat)).toString()).trim();
                         xTruncated = Float.parseFloat(truncateProcedure(xString, trunc));
                     }
                 }
@@ -862,10 +862,10 @@ public class Fmath{
                         }
                         int preInt = Integer.parseInt(xPreDot);
                         preInt += xArray[0];
-                        xPreDot = (new Integer(preInt)).toString();
+                        xPreDot = (Integer.valueOf(preInt)).toString();
                         tempString = "";
                         for(int i=1; i<=trunc; i++){
-                            tempString += (new Integer(xArray[i])).toString();
+                            tempString += (Integer.valueOf(xArray[i])).toString();
                         }
                         xPostDot = tempString;
                     }
@@ -877,7 +877,7 @@ public class Fmath{
                     if(tempDouble>=5.0){
                         int preInt = Integer.parseInt(xPreDot);
                         preInt++;
-                        xPreDot = (new Integer(preInt)).toString();
+                        xPreDot = (Integer.valueOf(preInt)).toString();
                     }
                     xPostDot = "0";
                 }
@@ -1217,8 +1217,8 @@ public class Fmath{
         // Returns 1 if x > y
         // x and y are double
         public static int compare(double x, double y){
-            Double X = new Double(x);
-            Double Y = new Double(y);
+            Double X = x;
+            Double Y = y;
             return X.compareTo(Y);
         }
 
@@ -1227,8 +1227,8 @@ public class Fmath{
         // Returns 1 if x > y
         // x and y are int
         public static int compare(int x, int y){
-            Integer X = new Integer(x);
-            Integer Y = new Integer(y);
+            Integer X = x;
+            Integer Y = y;
             return X.compareTo(Y);
         }
 
@@ -1237,8 +1237,8 @@ public class Fmath{
         // Returns 1 if x > y
         // x and y are long
         public static int compare(long x, long y){
-            Long X = new Long(x);
-            Long Y = new Long(y);
+            Long X = x;
+            Long Y = y;
             return X.compareTo(Y);
         }
 
@@ -1247,8 +1247,8 @@ public class Fmath{
         // Returns 1 if x > y
         // x and y are float
         public static int compare(float x, float y){
-            Float X = new Float(x);
-            Float Y = new Float(y);
+            Float X = x;
+            Float Y = y;
             return X.compareTo(Y);
         }
 
@@ -1257,8 +1257,8 @@ public class Fmath{
         // Returns 1 if x > y
         // x and y are short
         public static int compare(byte x, byte y){
-            Byte X = new Byte(x);
-            Byte Y = new Byte(y);
+            Byte X = x;
+            Byte Y = y;
             return X.compareTo(Y);
         }
 
@@ -1267,8 +1267,8 @@ public class Fmath{
         // Returns 1 if x > y
         // x and y are short
         public static int compare(short x, short y){
-            Short X = new Short(x);
-            Short Y = new Short(y);
+            Short X = x;
+            Short Y = y;
             return X.compareTo(Y);
         }
 
@@ -1978,13 +1978,13 @@ public class Fmath{
             for(int i=0; i<array.length; i++){
                 if(array[i]==value){
                     numberOfIndices++;
-                    arrayl.add(new Integer(i));
+                    arrayl.add(i);
                 }
             }
             if(numberOfIndices!=0){
                 indices = new int[numberOfIndices];
                 for(int i=0; i<numberOfIndices; i++){
-                    indices[i] = (arrayl.get(i)).intValue();
+                    indices[i] = arrayl.get(i);
                 }
             }
             return indices;
@@ -1999,13 +1999,13 @@ public class Fmath{
             for(int i=0; i<array.length; i++){
                 if(array[i]==value){
                     numberOfIndices++;
-                    arrayl.add(new Integer(i));
+                    arrayl.add(i);
                 }
             }
             if(numberOfIndices!=0){
                 indices = new int[numberOfIndices];
                 for(int i=0; i<numberOfIndices; i++){
-                    indices[i] = (arrayl.get(i)).intValue();
+                    indices[i] = arrayl.get(i);
                 }
             }
             return indices;
@@ -2020,13 +2020,13 @@ public class Fmath{
             for(int i=0; i<array.length; i++){
                 if(array[i]==value){
                     numberOfIndices++;
-                    arrayl.add(new Integer(i));
+                    arrayl.add(i);
                 }
             }
             if(numberOfIndices!=0){
                 indices = new int[numberOfIndices];
                 for(int i=0; i<numberOfIndices; i++){
-                    indices[i] = (arrayl.get(i)).intValue();
+                    indices[i] = arrayl.get(i);
                 }
             }
             return indices;
@@ -2041,13 +2041,13 @@ public class Fmath{
             for(int i=0; i<array.length; i++){
                 if(array[i]==value){
                     numberOfIndices++;
-                    arrayl.add(new Integer(i));
+                    arrayl.add(i);
                 }
             }
             if(numberOfIndices!=0){
                 indices = new int[numberOfIndices];
                 for(int i=0; i<numberOfIndices; i++){
-                    indices[i] = (arrayl.get(i)).intValue();
+                    indices[i] = arrayl.get(i);
                 }
             }
             return indices;
@@ -2062,13 +2062,13 @@ public class Fmath{
             for(int i=0; i<array.length; i++){
                 if(array[i]==value){
                     numberOfIndices++;
-                    arrayl.add(new Integer(i));
+                    arrayl.add(i);
                 }
             }
             if(numberOfIndices!=0){
                 indices = new int[numberOfIndices];
                 for(int i=0; i<numberOfIndices; i++){
-                    indices[i] = (arrayl.get(i)).intValue();
+                    indices[i] = arrayl.get(i);
                 }
             }
             return indices;
@@ -2083,13 +2083,13 @@ public class Fmath{
             for(int i=0; i<array.length; i++){
                 if(array[i]==value){
                     numberOfIndices++;
-                    arrayl.add(new Integer(i));
+                    arrayl.add(i);
                 }
             }
             if(numberOfIndices!=0){
                 indices = new int[numberOfIndices];
                 for(int i=0; i<numberOfIndices; i++){
-                    indices[i] = (arrayl.get(i)).intValue();
+                    indices[i] = arrayl.get(i);
                 }
             }
             return indices;
@@ -2104,13 +2104,13 @@ public class Fmath{
             for(int i=0; i<array.length; i++){
                 if(array[i]==value){
                     numberOfIndices++;
-                    arrayl.add(new Integer(i));
+                    arrayl.add(i);
                 }
             }
             if(numberOfIndices!=0){
                 indices = new int[numberOfIndices];
                 for(int i=0; i<numberOfIndices; i++){
-                    indices[i] = (arrayl.get(i)).intValue();
+                    indices[i] = arrayl.get(i);
                 }
             }
             return indices;
@@ -2125,13 +2125,13 @@ public class Fmath{
             for(int i=0; i<array.length; i++){
                 if(array[i].equals(value)){
                     numberOfIndices++;
-                    arrayl.add(new Integer(i));
+                    arrayl.add(i);
                 }
             }
             if(numberOfIndices!=0){
                 indices = new int[numberOfIndices];
                 for(int i=0; i<numberOfIndices; i++){
-                    indices[i] = (arrayl.get(i)).intValue();
+                    indices[i] = arrayl.get(i);
                 }
             }
             return indices;
@@ -2146,13 +2146,13 @@ public class Fmath{
             for(int i=0; i<array.length; i++){
                 if(array[i].equals(value)){
                     numberOfIndices++;
-                    arrayl.add(new Integer(i));
+                    arrayl.add(i);
                 }
             }
             if(numberOfIndices!=0){
                 indices = new int[numberOfIndices];
                 for(int i=0; i<numberOfIndices; i++){
-                    indices[i] = (arrayl.get(i)).intValue();
+                    indices[i] = arrayl.get(i);
                 }
             }
             return indices;
